Change sait for MyMessenger.

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5994,6 +5994,7 @@ body.modal-open,
 
 .carousel {
   position: relative;
+  
 }
 
 .carousel-inner {
@@ -6013,7 +6014,8 @@ body.modal-open,
 .carousel-inner > .item > a > img {
   display: block;
   height: auto;
-  max-width: 100%;
+  width:70%; 
+  margin: auto;
   line-height: 1;
 }
 
